[package]
name = "web3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
json= "0.12.4"
docker_runner = { git = "https://github.com/FrontMage/docker_runner" }
simplelog = "0.10.2"
log = "0.4.14"
openssl = { version = "0.10.32", features = ["vendored"] }
ethers = "0.6.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
sp-core = "6.0.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-keyring = "6.0.0"
hex-literal = "0.3.4"
secp256k1 = { version = "0.21", features = ["recovery"] }
rocket = { version = "0.5.0-rc.1" , features = ["json"]}
serde_json = "1.0.68"
bounded-vec-deque = "0.1.1"
